--- a/CSVkonventer/Views/CsvKonverter/CreateXml.cshtml
+++ b/CSVkonventer/Views/CsvKonverter/CreateXml.cshtml
@@ -3,18 +3,16 @@
 }@model CSVkonventer.Models.InvoicesViewModel
 <?xml version="1.0" encoding="Windows-1250"?>
 <dat:dataPack version="2.0" id="Konvertor" ico="46238425" application="Transformace" note="Uživatelský export" xmlns:dat="http://www.stormware.cz/schema/version_2/data.xsd">
-	 @{int cislo = Model.StartNumberingFrom; }     
      @foreach(var invoice in Model.Invoices) {
-     cislo++;  
-     <dat:dataPackItem version="2.0" id="Konvertor (@cislo.ToString("D3"))">      
+     <dat:dataPackItem version="2.0" id="Konvertor (@invoice.invoice_number)">      
 		<inv:invoice version="2.0" xmlns:inv="http://www.stormware.cz/schema/version_2/invoice.xsd">
 			<inv:invoiceHeader xmlns:rsp="http://www.stormware.cz/schema/version_2/response.xsd" xmlns:rdc="http://www.stormware.cz/schema/version_2/documentresponse.xsd" xmlns:typ="http://www.stormware.cz/schema/version_2/type.xsd" xmlns:lst="http://www.stormware.cz/schema/version_2/list.xsd" xmlns:lStk="http://www.stormware.cz/schema/version_2/list_stock.xsd" xmlns:lAdb="http://www.stormware.cz/schema/version_2/list_addBook.xsd" xmlns:acu="http://www.stormware.cz/schema/version_2/accountingunit.xsd" xmlns:vch="http://www.stormware.cz/schema/version_2/voucher.xsd" xmlns:int="http://www.stormware.cz/schema/version_2/intDoc.xsd" xmlns:stk="http://www.stormware.cz/schema/version_2/stock.xsd" xmlns:ord="http://www.stormware.cz/schema/version_2/order.xsd" xmlns:ofr="http://www.stormware.cz/schema/version_2/offer.xsd" xmlns:enq="http://www.stormware.cz/schema/version_2/enquiry.xsd" xmlns:vyd="http://www.stormware.cz/schema/version_2/vydejka.xsd" xmlns:pri="http://www.stormware.cz/schema/version_2/prijemka.xsd" xmlns:bal="http://www.stormware.cz/schema/version_2/balance.xsd" xmlns:pre="http://www.stormware.cz/schema/version_2/prevodka.xsd" xmlns:vyr="http://www.stormware.cz/schema/version_2/vyroba.xsd" xmlns:pro="http://www.stormware.cz/schema/version_2/prodejka.xsd" xmlns:con="http://www.stormware.cz/schema/version_2/contract.xsd" xmlns:adb="http://www.stormware.cz/schema/version_2/addressbook.xsd" xmlns:prm="http://www.stormware.cz/schema/version_2/parameter.xsd" xmlns:lCon="http://www.stormware.cz/schema/version_2/list_contract.xsd" xmlns:ctg="http://www.stormware.cz/schema/version_2/category.xsd" xmlns:ipm="http://www.stormware.cz/schema/version_2/intParam.xsd" xmlns:str="http://www.stormware.cz/schema/version_2/storage.xsd" xmlns:idp="http://www.stormware.cz/schema/version_2/individualPrice.xsd" xmlns:sup="http://www.stormware.cz/schema/version_2/supplier.xsd" xmlns:prn="http://www.stormware.cz/schema/version_2/print.xsd" xmlns:act="http://www.stormware.cz/schema/version_2/accountancy.xsd" xmlns:bnk="http://www.stormware.cz/schema/version_2/bank.xsd">
 				<inv:invoiceType>issuedInvoice</inv:invoiceType>
 			    <inv:number>
-					<typ:numberRequested>INV0@(invoice.invoice_number)</typ:numberRequested>
+					<typ:numberRequested>@(invoice.invoice_number)</typ:numberRequested>
 				</inv:number>
 				<inv:symVar>@invoice.invoice_number</inv:symVar>
-                <inv:symPar>INV0@(invoice.invoice_number)</inv:symPar>
+                <inv:symPar>@(invoice.invoice_number)</inv:symPar>
 				<inv:date>@invoice.date</inv:date>
 				<inv:dateTax>@invoice.date</inv:dateTax>
 				<inv:dateAccounting>@invoice.date</inv:dateAccounting>
